change jpg to svg

--- a/src/assets/scss/components/home.scss
+++ b/src/assets/scss/components/home.scss
@@ -141,7 +141,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: url('../../imgs/jpg/summary-about-me.jpg');
+  background: url('../../svg/summary-about-me.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
