--- a/src/assets/scss/components/common.scss
+++ b/src/assets/scss/components/common.scss
@@ -24,6 +24,7 @@
   border-radius: 25px;
   border: 1px solid #{$greenColor};
   color: #{$whiteColor};
+  background: transparent;
 }
 
 &-hidden_scroll {
