--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -50,6 +50,14 @@
       scroll-behavior: smooth;
     }
 
+    ul {
+      padding-inline-start: unset;
+    }
+
+    button {
+      font-weight: inherit;
+    }
+
     @media only screen and (max-width: 500px) {
 
       &::-webkit-scrollbar {
