update moduel federation

--- a/src/assets/scss/components/login.scss
+++ b/src/assets/scss/components/login.scss
@@ -30,6 +30,10 @@
     margin: 0 auto auto auto;
     width: fit-content;
 
+    &-v2 {
+      margin: auto;
+    }
+
     &-button {
       width: 100%;
       display: flex;
@@ -42,6 +46,10 @@
       padding: 5px 15px;
       background-color: #{$whiteColor};
       margin: auto;
+
+      &-v2 {
+        justify-content: unset;
+      }
 
       img {
         height: 35px;
@@ -116,6 +124,11 @@
       }
     }
   }
+}
+
+&-login-v2 {
+  height: 250px;
+  display: flex;
 }
 
 &-login_title {
