update federation config

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -45,7 +45,7 @@
 
     * {
       transition: all .3s ease;
-      font-family: 'KoHo', sans-serif;
+      font-family: 'Metrophobic', 'KoHo', sans-serif;
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
