add manager module

--- a/src/assets/scss/components/index.scss
+++ b/src/assets/scss/components/index.scss
@@ -6,3 +6,5 @@
 @import './about-me.scss';
 @import './common.scss';
 @import './login.scss';
+@import './shared.scss';
+@import './table-layout.scss';
