--- a/src/assets/scss/shared.scss
+++ b/src/assets/scss/shared.scss
@@ -47,7 +47,7 @@
 
 &-label {
   color: #{$mainTextColor};
-  margin-left: 10px;
+  // margin-left: 10px;
   margin-bottom: 5px;
   display: block;
   text-align: left;
