--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -62,6 +62,9 @@ $headerYellow: #fff9ed;
 $headerLightBlue: #f4f7fd;
 $tableToggleFilterHeight: 36px;
 $listItem2n: #fbfafa;
+$normal-border: #d9d9d9;
+$normal-color: #7e90aa;
+$dcIconWidth: 30px;
 
 //#regin reponsive
 $breakPointRetina: 1367px;
