--- a/src/assets/scss/shared.scss
+++ b/src/assets/scss/shared.scss
@@ -94,6 +94,19 @@
   font-family: 'Koho' !important;
 }
 
+&-col-action {
+  width: 100%;
+  min-width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+&-background-green {
+  background-color: $greenColor;
+}
+
 $size: 0,
   5,
   10,
