--- a/src/assets/scss/shared.scss
+++ b/src/assets/scss/shared.scss
@@ -104,7 +104,11 @@
 }
 
 &-background-green {
-  background-color: $greenColor;
+  background-color: $greenColor !important;
+
+  &:hover {
+    background-color: $greenColor !important;
+  }
 }
 
 $size: 0,
