--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -37,6 +37,7 @@
 
     &::-webkit-scrollbar-thumb:hover {
       background: $scrollBarHoverColor;
+      width: 10px;
     }
 
     p, span, h1, h2, h3, h4, h5, h6 {
