--- a/src/assets/scss/components/winfit-online.scss
+++ b/src/assets/scss/components/winfit-online.scss
@@ -31,17 +31,17 @@
     border-radius: 20px;
     z-index: 2;
     overflow: hidden;
+    position: relative;
 
     &-wrap {
       z-index: initial;
-      position: relative;
       width: 100%;
       height: 100%;
       padding: 20px;
       overflow: hidden auto;
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 10px;
       justify-content: space-between;
       align-items: flex-start;
     }
@@ -71,8 +71,14 @@
     z-index: 2;
     width: 100%;
 
-    input {
+    input:not(:last-child) {
       margin-bottom: 20px;
+    }
+
+    .tt-label {
+      font-family: 'Koho';
+      font-size: 16px;
+      font-weight: 500;
     }
 
     nz-radio-group {
@@ -85,8 +91,9 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    position: relative;
-    z-index: 2;
+    position: sticky;
+    bottom: 0;
+    z-index: 3;
   }
 
   &-modal {
@@ -136,7 +143,8 @@
         .ant-table-thead {
 
           .ant-table-cell {
-            background-color: #FF682B;
+            background-color: #FFB548;
+            // background-color: #FF682B;
           }
         }
       }
@@ -146,7 +154,8 @@
         .ant-table-thead {
 
           .ant-table-cell {
-            background-color: #00D181;
+            background-color: #FFB548;
+            // background-color: #00D181;
           }
         }
       }
@@ -156,7 +165,8 @@
         .ant-table-thead {
 
           .ant-table-cell {
-            background-color: #009FFF;
+            background-color: #FFB548;
+            // background-color: #009FFF;
           }
         }
       }
